# FinanceAggregator

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  config.py  finance_data_builder.py  requirements.txt  setup.cfg
config_example/: config.json
finance_aggregator/: app.py  config.py
finance_aggregator/finance_data/constants/: __init__.py
finance_aggregator/finance_data/postprocessors/: filter_by_date.py  filter_by_name.py  negate_amount.py
finance_data/: __init__.py  categories.py  combine_in_out_columns.py  constants.py  date_format.py  filter_by_date.py  filter_by_name.py  finance_data.py  finance_data_base.py  negate_amount.py  notes.py  preprocess_amount.py
finance_data/constants/: __init__.py  columns.py
finance_data/errors/: __init__.py  configuration_error.py
finance_data/postprocessors/: __init__.py  categories.py  filter_by_date.py  filter_by_name.py  negate_amount.py  notes.py  postprocessor.py
finance_data/preprocessors/: __init__.py  add_missing_header.py  combine_in_out_columns.py  preprocessor.py
src/finance_aggregator/: __init__.py  app.py  config.py  finance_data_builder.py
src/finance_aggregator/finance_data/: __init__.py  finance_data.py
src/finance_aggregator/finance_data/constants/: __init__.py  columns.py
src/finance_aggregator/finance_data/errors/: __init__.py  configuration_error.py
tests/: postprocessors_test.py  preprocessors_test.py
tests/e2e_cli/: e2e_cli_test.py  missing_header_config.json  missing_header_expected_output.csv  missing_header_input.csv
(+10 files in other folders)
