[metadata]
name = finance-aggregator
version = 1.0.0

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    pandas==1.5.0
    pydantic==2.3.0
    pydantic_core==2.6.3
package_dir=
    =src

[options.extras_require]
dev = 
    black
    pre-commit
    pytest==7.4.1

[options.entry_points]
console_scripts = 
    finance-aggregator = finance_aggregator:main

[options.packages.find]
where=src

[options.package_data]
finance_aggregator = README.md
